Fixed title sizing on mobile

--- a/css/layout_default.css
+++ b/css/layout_default.css
@@ -490,7 +490,7 @@ body {
     header {
       margin-bottom: 0;
       a.hero-link {
-        font-size: 2rem;
+        font-size: 1.5rem;
         white-space: nowrap;
       }
     }
